--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,11 +2,13 @@
 $color:red;
 h1 {
     color: $color;
+    text-align: center;
 }
 
-.herro h1 {
+.herro div {
     display: inline;
     width: 100%;
+    height: 100%;
     text-align: center;
-    background-color: brown;
+    background-color: yellow;
 }
