--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10005,11 +10005,13 @@ h3 {
 }
 h1 {
   color: red;
+  text-align: center;
 }
 
-.herro h1 {
+.herro div {
   display: inline;
   width: 100%;
+  height: 100%;
   text-align: center;
-  background-color: brown;
+  background-color: yellow;
 }
